@@ -6,7 +6,7 @@ import lombok.NoArgsConstructor;
 import org.apache.poi.ss.usermodel.CellStyle;
 import org.apache.poi.ss.usermodel.DataFormat;
 import org.apache.poi.ss.usermodel.Workbook;
-import org.tuanna.xcloneserver.dtos.TestUser;
+import org.tuanna.xcloneserver.modules.user.dtos.UserDTO;
 import org.tuanna.xcloneserver.utils.DateUtils;
 
 import java.util.Arrays;
@@ -16,39 +16,37 @@ import java.util.function.Function;
 @Data
 @AllArgsConstructor
 @NoArgsConstructor
-public class TestUserExportTemplate implements ExportTemplate<TestUser> {
+public class UserExportTemplate implements ExportTemplate<UserDTO> {
 
-    private static final List<String> HEADER = List.of("ID", "Username", "Email", "Name", "Address", "Street", "City", "Country", "Created At", "Updated At");
-    private static final Function<TestUser, List<Object>> ROW_DATA_EXTRACTOR_FORMATTED = user -> Arrays.asList(
+    private static final List<String> HEADER = List.of("ID", "Username", "Email", "Name", "Status", "Created By", "Updated By", "Created At", "Updated At");
+    private static final Function<UserDTO, List<Object>> ROW_DATA_EXTRACTOR_FORMATTED = user -> Arrays.asList(
             user.getId().toString(),
             user.getUsername(),
             user.getEmail(),
             user.getName(),
-            user.getAddress(),
-            user.getStreet(),
-            user.getCity(),
-            user.getCountry(),
+            user.getStatus(),
+            user.getCreatedBy().toString(),
+            user.getUpdatedBy().toString(),
             DateUtils.toFormat(user.getCreatedAt(), DateUtils.Formatter.DATE_TIME_BE),
             DateUtils.toFormat(user.getUpdatedAt(), DateUtils.Formatter.DATE_TIME_BE));
-    private static final Function<TestUser, List<Object>> ROW_DATA_EXTRACTOR = user -> Arrays.asList(
+    private static final Function<UserDTO, List<Object>> ROW_DATA_EXTRACTOR = user -> Arrays.asList(
             user.getId(),
             user.getUsername(),
             user.getEmail(),
             user.getName(),
-            user.getAddress(),
-            user.getStreet(),
-            user.getCity(),
-            user.getCountry(),
+            user.getStatus(),
+            user.getCreatedBy(),
+            user.getUpdatedBy(),
             user.getCreatedAt(),
             user.getUpdatedAt());
     private static final Function<Workbook, List<CellStyle>> ROW_STYLE_EXTRACTOR = workbook -> {
         CellStyle dateCellStyle = workbook.createCellStyle();
         DataFormat dataFormat = workbook.createDataFormat();
         dateCellStyle.setDataFormat(dataFormat.getFormat(DateUtils.Format.DATE_TIME_FE));
-        return Arrays.asList(null, null, null, null, null, null, null, null, dateCellStyle, dateCellStyle);
+        return Arrays.asList(null, null, null, null, null, null, null, dateCellStyle, dateCellStyle);
     };
 
-    private List<TestUser> body;
+    private List<UserDTO> body;
 
     @Override
     public List<String> getHeader() {
@@ -56,12 +54,12 @@ public class TestUserExportTemplate implements ExportTemplate<TestUser> {
     }
 
     @Override
-    public List<TestUser> getBody() {
+    public List<UserDTO> getBody() {
         return body;
     }
 
     @Override
-    public Function<TestUser, List<Object>> getRowDataExtractor(boolean formatAsString) {
+    public Function<UserDTO, List<Object>> getRowDataExtractor(boolean formatAsString) {
         return formatAsString ? ROW_DATA_EXTRACTOR_FORMATTED : ROW_DATA_EXTRACTOR;
     }
 
